kubernetes/resources/camunda.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: camunda
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: camunda
    spec:
      containers:
      - name: camunda 
        image: camunda/camunda-bpm-platform:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: camunda
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: camunda
  type: LoadBalancer
