kubernetes/resources/wso2-esb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wso2esb
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wso2esb
    spec:
      containers:
      - name: wso2esb
        image: isim/wso2esb
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: wso2esb
spec:
  ports:
  - port: 9443
  selector:
    app: wso2esb
  type: LoadBalancer
